<resources>
    <string name="app_name">Furniture Store</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="emil">Please enter Email</string>
    <string name="Exemail">12fatimah.15@gmail.com</string>
    <string name="Enter_Pass">Please enter Password</string>
    <string name="loginn">LOGIN</string>
    <string name="sing_up">Dont hava account ? Sing up</string>
    <string name="ExPass">FatimahAlz*12</string>
    <string name="enter_email_please">* Please Enter Your Email</string>
    <string name="enter_password_please">* Please Enter Your Password</string>
    <string name="enter_email_vaild">* Please Enter Vaild Email</string>
    <string name="symbols_password"><![CDATA[* The password must contain one of these symbols (*, @, $, #, &)]]></string>
    <string name="password_lenght">* Password must be 8 or more characters long</string>
    <string name="pattren">^(?=.{1,64}@)[A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*@[^-][A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="create_new_account">Create new Account</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="sing_upp">Sing Up</string>
    <string name="huda_al_zahrani">Huda Al_zahrani</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="Exemail2">hmzahrani@bu.edu.sa</string>
    <string name="Expass">12*Huda*12</string>
    <string name="home_page">Home Page</string>
    <string name="Text1">we have a various furniture (bed, chair, kitchen, sofa, etc.)</string>
    <string name="Texxt2">Best app for buying furniture</string>
    <string name="Text3">You can also add furniture to sell!</string>
    <string name="Text5">We have many different shapes and colors</string>
    <string name="Text4">All this and more in our amazing app</string>
    <string name="Text6">What are you waiting for go now and start shopping!</string>
    <string name="all_announcement">All Announcement</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="go_to_google_maps">Go to Google Maps</string>
    <string name="Exname">Fatimah Alzahrani</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="name_of_announcement">Name of Announcement</string>
    <string name="url_of_the_announcement_image">URL of the Announcement image</string>
    <string name="url_of_the_announcement_dimensions">URL of the Announcement Dimensions</string>
    <string name="price_of_announcement">Price of Announcement</string>
    <string name="type_of_announcement">Type of announcement</string>
    <string name="composition_of_announcement">Composition of Announcement</string>
    <string name="durability_of_announcement">Durability of Announcement</string>
    <string name="add_new_announcement">Add new Announcement</string>
    <string name="composition">Composition</string>
    <string name="durability">Durability</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="_0558699756">0558699756</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="name_of_annoucement">Name of Annoucement</string>
    <string name="search">Search Here ...</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="go_to_favorite">Go To Favorite</string>
    <string name="check_out">Check Out</string>
    <string name="color_of_announcement">Color of announcement</string>
    <string name="enter_amount_to_pay">enter amount to pay</string>
    <string name="logout">Logout</string>
    <string name="stt">*</string>
    <string name="one">1</string>
    <string name="your_phone_number">your phone number</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favorite">Favorite</string>
    <string name="ops">Ohhh... Your cart is empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>