<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sing_up"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="400dp"
                android:layout_height="130dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-100dp"
                app:srcCompat="@drawable/topback" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="-30dp"
                android:src="@drawable/buttonback" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="30dp">
            <TextView
                android:fontFamily="@font/stayland"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/create_new_account"
                android:textStyle="bold"
                android:textColor="#43319F"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                />
            <TextView
                android:fontFamily="@font/stayland"
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/already_registered_login"
                android:textStyle="bold"
                android:onClick="login"
                android:textColor="#4229C4"
                />
            <TextView
                android:fontFamily="@font/ascendantserifregular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:text="@string/please_enter_name"
                android:layout_marginStart="40dp"
                />
            <EditText
                android:fontFamily="@font/clustdemo"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="15"
                android:hint="@string/huda_al_zahrani"
                android:layout_marginStart="30dp"
                android:background="@drawable/editext_border"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#A30E0E"
                android:text=""
                android:layout_marginEnd="90dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                />
            <TextView
                android:fontFamily="@font/ascendantserifregular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:text="@string/emil"
                android:layout_marginStart="40dp"
                />
            <EditText
                android:fontFamily="@font/clustdemo"
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="15"
                android:hint="@string/Exemail2"
                android:layout_marginStart="30dp"
                android:background="@drawable/editext_border"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/wrongemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#A30E0E"
                android:text=""
                android:layout_marginEnd="90dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                />
            <TextView
                android:fontFamily="@font/ascendantserifregular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:text="@string/Enter_Pass"
                android:layout_marginStart="40dp"
                />
            <EditText
                android:fontFamily="@font/clustdemo"
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="15"
                android:hint="@string/Expass"
                android:layout_marginStart="30dp"
                android:padding="10dp"
                android:background="@drawable/editext_border"/>
            <TextView
                android:id="@+id/wrongpassowrd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#A30E0E"
                android:text=""
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="80dp"
                android:textStyle="bold"/>
            <TextView
                android:fontFamily="@font/ascendantserifregular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:text="@string/confirm_your_password"
                android:layout_marginStart="40dp"
                />
            <EditText
                android:fontFamily="@font/clustdemo"
                android:id="@+id/password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="15"
                android:hint="@string/Expass"
                android:layout_marginStart="30dp"
                android:padding="10dp"
                android:background="@drawable/editext_border"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#A30E0E"
                android:text=""
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="80dp"
                android:textStyle="bold"/>
            <TextView
                android:fontFamily="@font/ascendantserifregular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:text="@string/enter_your_phone_number"
                android:layout_marginStart="40dp"
                />
            <EditText
                android:fontFamily="@font/clustdemo"
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="15"
                android:hint="@string/_0558699756"
                android:layout_marginStart="30dp"
                android:padding="10dp"
                android:background="@drawable/editext_border"/>
            <Button
                android:fontFamily="@font/feilla"
                android:id="@+id/btnSignUp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sing_upp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="#8D238B"
                android:onClick="Home"
                />

        </LinearLayout>
        <ProgressBar
            android:id="@+id/signUpProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            />
    </FrameLayout>
</LinearLayout>