<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-10dp"
                app:srcCompat="@drawable/topback" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-10dp"
            android:src="@drawable/buttonback"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="410dp"
                android:id="@+id/img"
                android:layout_marginTop="260dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="160dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="#715CF8"
                android:fontFamily="@font/stayland"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/stayland"
                android:gravity="center"
                android:text="@string/sign_in_to_continue"
                android:textColor="#715CF8"
                android:textStyle="bold" />

<!--            <ImageView-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="138dp"-->
<!--                android:src="@drawable/img_3"-->
<!--                />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/please_enter_name"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/ascendantserifregular"
                />
            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginEnd="30dp"
                android:ems="15"
                android:hint="@string/Exname"
                android:layout_marginStart="30dp"
                android:background="@drawable/editext_border"
                android:padding="10dp"
                android:fontFamily="@font/clustdemo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/stt"
                    android:textColor="#B30606"
                    android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/emil"
                android:fontFamily="@font/ascendantserifregular"
                />
        </LinearLayout>
            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="15"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/clustdemo"
                android:hint="@string/Exemail"
                android:layout_marginStart="30dp"
                android:background="@drawable/editext_border"
                android:padding="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/stt"
                android:textColor="#B30606"
                android:textSize="20dp"/>
            <TextView
                android:fontFamily="@font/ascendantserifregular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/Enter_Pass"
                />
        </LinearLayout>
            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="15"
                android:fontFamily="@font/clustdemo"
                android:layout_marginEnd="30dp"
                android:hint="@string/ExPass"
                android:layout_marginStart="30dp"
                android:padding="10dp"
                android:background="@drawable/editext_border"/>
<!--            <TextView-->
<!--                android:id="@+id/wrongpassowrd"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="#A30E0E"-->
<!--                android:text=""-->
<!--                android:layout_marginStart="40dp"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:layout_marginEnd="80dp"-->
<!--                android:textStyle="bold"/>-->
            <Button
                android:id="@+id/btnlogin"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_border"
                android:backgroundTint="#715CF8"
                android:fontFamily="@font/sscendantserifmedium"
                android:onClick="sing_in"
                android:text="@string/loginn"
                android:textSize="19dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sing_up"
                android:textSize="17dp"
                android:layout_gravity="center"
                android:onClick="Sing_up"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinslight"
                />
        </LinearLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prog"
            android:visibility="invisible"
            android:layout_gravity="center"
            />

    </FrameLayout>
    </FrameLayout>
</LinearLayout>