<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:id="@+id/item"
    android:background="@drawable/item_border"
    >

    <TextView
        android:id="@+id/namep"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/clustdemo"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/img"
        android:layout_gravity="center"
        android:src="@drawable/person"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/poppinsblack"
        android:textSize="18dp"
        android:text="@string/price"/>

<!--        150dp-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_border2"
        >
<!--        android:id="@+id/add"-->
<!--        android:onClick="addCart"-->

        <TextView
            android:id="@+id/add"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:fontFamily="@font/sscendantserifmedium"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/fav"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/star"
            android:backgroundTint="@color/black"

            />

    </LinearLayout>
<!--    <ImageView-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:src="@drawable/srtar"-->
<!--        android:onClick="Favorite"-->
<!--        />-->
</LinearLayout>